--- a/src/components/level-field/level-field-component.scss
+++ b/src/components/level-field/level-field-component.scss
@@ -2,16 +2,16 @@
   .level_content-wrapper {
     position: absolute;
     z-index: 5;
-    max-width: 230px;
+    max-width: 130px;
     width: 100%;
-    top: 10px;
-    left: 40px;
+    top: 5px;
+    left: 15px;
 
     .bar-level-wrapper {
       position: absolute;
       width: 100%;
-      max-width: 220px;
-      top: 2.5rem;
+      max-width: 125px;
+      top: 1.4rem;
       left: 0;
       display: flex;
       align-items: center;
@@ -20,8 +20,8 @@
       .bar-level {
         position: relative;
         width: 100%;
-        max-width: 22px;
-        margin: 0px 7px;
+        max-width: 12px;
+        margin: 0px 2.5px;
       }
     }
   }
