--- a/src/components/timerHtml/timerHtml.scss
+++ b/src/components/timerHtml/timerHtml.scss
@@ -1,6 +1,6 @@
 #timer-ticking {
   position: relative;
-  top: 17%;
+  top: 18%;
   width: 100%;
   display: flex;
 
@@ -9,15 +9,15 @@
     position: absolute;
     bottom: 0px;
     width: 100%;
-    height: 70px;
+    height: 40px;
   }
 
   #rotating-clock {
-    left: 55px;
     animation: rotateClock 2s linear infinite;
     position: absolute;
-    width: 100px;
-    bottom: -15px;
+    width: 55px;
+    bottom: -5px;
+    left: 30px;
   }
 
   #timer-full-container {
@@ -26,7 +26,7 @@
     left: 14%;
     width: 100%;
     overflow: hidden;
-    height: 70px;
+    height: 40px;
 
     #timer-full {
       position: absolute;
